@@ -43,8 +43,11 @@ import ec.*;
  <font size=-1>float &gt;= 1</font></td>
  <td valign=top>(the tournament size)</td></tr>
  <tr><td valign=top><i>base.</i><tt>n</tt><br>
- <font size=-1> int > 0 (default is 1)</font></td>
+ <font size=-1> int > 0 </font></td>
  <td valign=top>(the number of best-individuals to select from)</td></tr>
+ <tr><td valign=top><i>base.</i><tt>n-frac</tt><br>
+ <font size=-1> 0.0 <= float < 1.0 (default is 1)</font></td>
+ <td valign=top>(the number of best-individuals to select from, as a fraction of the total population)</td></tr>
  </table>
 
  <p><b>Default Base</b><br>
@@ -60,6 +63,7 @@ public class BestSelection extends SelectionMethod
     public static final String P_BEST = "best";
     
     public static final String P_N = "n";
+    public static final String P_N_FRAC = "n-frac";
     public static final String P_PICKWORST = "pick-worst";
     public static final String P_SIZE = "size";
 
@@ -75,7 +79,9 @@ public class BestSelection extends SelectionMethod
     /** Sorted, normalized, totalized fitnesses for the population */
     public int[] sortedPop;
 
-    public int bestn;
+	public static final int NOT_SET = -1;
+    public int bestn = NOT_SET;
+    public double bestnFrac = NOT_SET;
 
     public Parameter defaultBase()
         {
@@ -90,11 +96,24 @@ public class BestSelection extends SelectionMethod
         
         Parameter def = defaultBase();
         
-        bestn =
-            state.parameters.getInt(base.push(P_N),def.push(P_N),1);
-        if (bestn == 0 )
-            state.output.fatal("n must be an integer greater than 0", base.push(P_N),def.push(P_N));
-        
+        if ( state.parameters.exists(base.push(P_N),def.push(P_N)) )
+        	{
+    	    bestn =
+	            state.parameters.getInt(base.push(P_N),def.push(P_N),1);
+        	if (bestn == 0 )
+            	state.output.fatal("n must be an integer greater than 0", base.push(P_N),def.push(P_N));
+        	}
+        else if (state.parameters.exists(base.push(P_N_FRAC),def.push(P_N_FRAC)) )
+        	{
+        	if (state.parameters.exists(base.push(P_N),def.push(P_N)) )
+        		state.output.fatal("Both n and n-frac specified for BestSelection.", base.push(P_N),def.push(P_N));
+    	    bestnFrac =
+	            state.parameters.getDoubleWithMax(base.push(P_N_FRAC),def.push(P_N_FRAC),0.0,1.0);
+        	if (bestnFrac <= 0.0)
+            	state.output.fatal("n-frac must be a floating-point value greater than 0.0 and <= 1.0", base.push(P_N_FRAC),def.push(P_N_FRAC));
+        	}
+        else state.output.fatal("Either n or n-frac must be defined for BestSelection.", base.push(P_N),def.push(P_N));
+        	
         pickWorst = state.parameters.getBoolean(base.push(P_PICKWORST),def.push(P_PICKWORST),false);
 
         double val = state.parameters.getDouble(base.push(P_SIZE),def.push(P_SIZE),1.0);
@@ -146,6 +165,12 @@ public class BestSelection extends SelectionMethod
         		sortedPop[x] = sortedPop[sortedPop.length - x - 1];
         		sortedPop[sortedPop.length - x - 1] = p;
         		}
+        		
+        // figure out bestn
+        if (bestnFrac != NOT_SET)
+        	{
+        	bestn = (int) Math.max(Math.floor(s.population.subpops[subpopulation].individuals.length * bestnFrac), 1);
+        	}
         }
 
 
