@@ -2037,3 +2037,7 @@ Version		Change Log
 	Added Langerman to ECSuite
 	Bug fixes and improvemdnts to RandomRestarts, which also no longer works
 		with Steady State (for the time being).
+	Added elite.frac to Subpopulation, and a method for determining the number
+		of elites in general.
+	Added fraction mechanism to BestSelection
+
